--- a/app/templates/director.html
+++ b/app/templates/director.html
@@ -45,7 +45,7 @@
                         No companies yet, <a href="/add_company">add company</a>
                     {% endif %}
                 </p>
-                <p>{{director.date_of_birth}}</p>
+                <p>Age: {{director.date_of_birth}}</p>
             </div>
         </div>
         <hr class="red-h-line">
