--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -44,6 +44,10 @@
         </div>
     {% endif %}  
 
+    <div class="login-admin">
+        <a href="/about">About us</a>
+    </div>
+
     <div class="sticker">
         <img src="/static/games_images/sticker.jpg">
     </div>
