--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -5,7 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/styles.css">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="/static/script.js"></script>
+        <script src="/static/javascript/filter.js"></script>
+        <script src="/static/javascript/dashboard.js"></script>
+        <script src="/static/javascript/add_stuff.js"></script>
+        <script src="/static/javascript/submit_limit.js"></script>
     </head>
     <body  class="fade">
 
