--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,17 +1,26 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<form method="POST" action="{{ url_for('login') }}">
-    {{ login_form.hidden_tag() }}
-    <div>
-        <label>Email:</label>
-        {{ login_form.login_user_email() }} {{ login_form.login_user_email.errors }}
+<div class="login-register-box">
+    <div class="page-name">
+        Login
     </div>
-    <div>
-        <label>Password:</label>
-        {{ login_form.login_user_password() }} {{ login_form.login_user_password.errors }}
-    </div>
-    {{ login_form.submit() }}
-</form>
-<a href="/register">Don't have an account? Register</a>
+    <form method="POST" action="{{ url_for('login') }}">
+        {{ login_form.hidden_tag() }}
+        <div>
+            <input type="text" class="add_stuff_bar" maxlength="20" name="login_user_email" placeholder="Email(maxlength = 20)">
+            {% if login_form.login_user_email.errors %}
+            <span class="error-message">{{ login_form.login_user_email.errors[0] }}</span>
+            {% endif %}
+        </div>
+        <div>
+            <input type="password" class="add_stuff_bar" maxlength="20" name="login_user_password" placeholder="password(maxlength = 20)">
+            {% if login_form.login_user_password.errors %}
+            <span class="error-message">{{ login_form.login_user_password.errors[0] }}</span>
+            {% endif %}
+        </div>
+        <button type="submit">Login</button>
+    </form>
+    <a href="/register">Don't have an account? Register</a>
+</div>
 {% endblock %}
